@@ -39,7 +39,9 @@ collection.find_series_by_collection_id = \
        ON cat.id = s.category_id \
 LEFT JOIN countries count \
        ON count.id = s.country_id \
-    WHERE cs.collection_id = :collection_id
+    WHERE cs.collection_id = :collection_id \
+ ORDER BY cs.added_at DESC \
+        , cs.id DESC
 
 collection.find_series_with_prices_by_slug = \
    SELECT s.id \
@@ -57,7 +59,9 @@ collection.find_series_with_prices_by_slug = \
        ON s.id = cs.series_id \
 LEFT JOIN countries count \
        ON count.id = s.country_id \
-    WHERE c.slug = :slug
+    WHERE c.slug = :slug \
+ ORDER BY cs.added_at DESC \
+        , cs.id DESC
 
 collection.find_all_for_sitemap = \
   SELECT c.slug AS id \
@@ -122,12 +126,14 @@ SELECT COUNT(*) \
    AND cs.series_id = :series_id
 
 collection.find_series_instances = \
-SELECT cs.id, cs.number_of_stamps \
-  FROM collections c \
-  JOIN collections_series cs \
-    ON cs.collection_id = c.id \
- WHERE c.user_id = :user_id \
-   AND cs.series_id = :series_id
+  SELECT cs.id, cs.number_of_stamps \
+    FROM collections c \
+    JOIN collections_series cs \
+      ON cs.collection_id = c.id \
+   WHERE c.user_id = :user_id \
+     AND cs.series_id = :series_id \
+ORDER BY cs.added_at DESC \
+       , cs.id DESC
 
 collection.add_series_to_collection = \
 INSERT \
@@ -137,12 +143,14 @@ INSERT \
      , number_of_stamps \
      , price \
      , currency \
+     , added_at \
      ) \
 SELECT c.id AS collection_id \
       , :series_id AS series_id \
       , :number_of_stamps AS number_of_stamps \
       , :price as price \
       , :currency as currency \
+      , :added_at as added_at \
   FROM collections c \
  WHERE c.user_id = :user_id
 
